# DataSearch-Pro

./: .gitignore  CHANGELOG.md  README.md  drizzle.config.ts  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
.github/: renovate.json
.github/workflows/: build.yml  format.yml  release.yml
messages/: af.json  ar.json  bn.json  bs.json  ca.json  cs.json  da.json  de.json  el.json  en.json  es.json  fi.json  fr.json  gl.json  gu.json  he.json  hi.json  hr.json  hu.json  id.json  is.json  it.json  ja.json  ko.json  lt.json  lv.json  mr.json  my.json  nl.json  no.json  pa.json  pl.json  pt.json  ro.json  ru.json  sk.json  sl.json  sr.json  sv.json  sw.json  (+7 more)
project.inlang/: project_id  settings.json
src/: app.d.ts  app.html  hooks.client.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0000_init.sql  0001_solid_midnight.sql
src-tauri/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
src-tauri/src/: lib.rs  main.rs
src/lib/components/: VirtualList.svelte  navbar.svelte  updater.svelte
src/lib/components/main/: Content.svelte  Sidebar.svelte
src/lib/css/: md.css
src/lib/db/: index.ts  schema.ts
src/lib/db/schema/: fileTags.ts  fileVersions.ts  files.ts  scans.ts  (+2 more)
src/lib/extractors/: Extractor.ts  doc.ts  docx.ts  extractors.ts  html.ts  img.ts  office.ts  pdf.ts  rtf.ts  txt.ts  xlsx.ts  xml.ts
src/lib/maintenance/: cleanupMissingFiles.ts
src/lib/services/: settingsService.ts
src/lib/stores/: indexing.svelte.ts  indexing.ts  settings.svelte.ts
src/lib/types/: encodings.ts  fileWihtTags.ts  indexing.ts
src/lib/utils/: brightness.ts  fileService.ts  fileUtils.ts  formatBytes.ts  hash.ts  icons.ts  officeUtils.ts  sanitizeText.ts  split.ts
src/lib/validation/: settingsSchema.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte  +page.ts
src/routes/about/: +page.svelte
src/routes/dashboard/: +page.svelte
src/routes/settings/: +page.svelte
(+3 files in other folders)
